@@ -1,7 +1,7 @@
 /*
  * An implementation of Common ISDN API 2.0 for Asterisk
  *
- * Copyright (C) 2005-2008 Cytronics & Melware
+ * Copyright (C) 2005-2009 Cytronics & Melware
  *
  * Armin Schindler <armin@melware.de>
  * 
